src/patternfly/components/TextInputGroup/text-input-group.scss
/* ... */
.#{$text-input-group} {
  position: relative;
  display: flex;
  width: 100%; // when child of flex layout, take up space
  font-size: var(--#{$text-input-group}__FontSize);
  line-height: var(--#{$text-input-group}__LineHeight);
  color: var(--#{$text-input-group}--Color, inherit);
  background-color: var(--#{$text-input-group}--BackgroundColor);
  border-start-start-radius: var(--#{$text-input-group}__text--BorderStartStartRadius);
  border-start-end-radius: var(--#{$text-input-group}__text--BorderStartEndRadius);
  border-end-start-radius: var(--#{$text-input-group}__text--BorderEndStartRadius);
  border-end-end-radius: var(--#{$text-input-group}__text--BorderEndEndRadius);

  &::before {
    position: absolute;
    inset: 0;
    pointer-events: none;
    content: "";
    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
    border-start-start-radius: var(--#{$text-input-group}__text--BorderStartStartRadius);
    border-start-end-radius: var(--#{$text-input-group}__text--BorderStartEndRadius);
    border-end-start-radius: var(--#{$text-input-group}__text--BorderEndStartRadius);
    border-end-end-radius: var(--#{$text-input-group}__text--BorderEndEndRadius);
  }

  &.pf-m-disabled {
    --#{$text-input-group}--Color: var(--#{$text-input-group}--m-disabled--Color);
    --#{$text-input-group}__icon--Color: var(--#{$text-input-group}--m-disabled__icon--Color);
    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}--m-disabled__icon--m-status--Color);
    --#{$text-input-group}--BackgroundColor: var(--#{$text-input-group}--m-disabled--BackgroundColor);

    pointer-events: none;
  }

  &.pf-m-plain {
    --#{$text-input-group}--BackgroundColor: transparent;

    &::before {
      border: 0;
    }    
  }

  &.pf-m-success {
    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-success--BorderColor);
    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-success--BorderColor);
    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-success__icon--m-status--Color);  
  }

  &.pf-m-warning {
    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-warning--BorderColor);
    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-warning--BorderColor);
    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-warning__icon--m-status--Color);  
  }

  &.pf-m-error {
    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-error--BorderColor);
    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-error--BorderColor);
    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-error__icon--m-status--Color);  
    
    @media (prefers-reduced-motion: no-preference) {
      @include pf-v6-animate-danger-jiggle;
    }
    
    .#{$text-input-group}__icon.pf-m-status {
      @include pf-v6-fade-default(#{$text-input-group});
    }
  }
  
  &:hover {
    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-hover--BorderColor);
  }

  &:where(.pf-m-success, .pf-m-warning, .pf-m-error) {
    --#{$text-input-group}__text-input--PaddingInlineEnd: var(--#{$text-input-group}--status__text-input--PaddingInlineEnd);
  }

  &:has(> .#{$text-input-group}__utilities) {
    --#{$text-input-group}__icon--m-status--InsetInlineEnd: var(--#{$text-input-group}--utilities--icon--m-status--InsetInlineEnd);
    --#{$text-input-group}--status__text-input--PaddingInlineEnd: var(--#{$text-input-group}--utilities--status__text-input--PaddingInlineEnd);
  }
}

.#{$text-input-group}__main {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  gap: var(--#{$text-input-group}__main--RowGap) var(--#{$text-input-group}__main--ColumnGap);
  min-width: 0;
  
  &.pf-m-icon {
    --#{$text-input-group}__text--Position: relative;
    --#{$text-input-group}__text-input--PaddingInlineStart: var(--#{$text-input-group}__main--m-icon__text-input--PaddingInlineStart);

    display: inline-flex;
    align-items: center;
    justify-content: center;
    min-width: calc(var(--#{$text-input-group}__LineHeight) * var(--#{$text-input-group}__FontSize));
  }

  > :first-child:not(.#{$text-input-group}__text) {
    margin-inline-start: var(--#{$text-input-group}__main--first-child--not--text-input--MarginInlineStart);
  }

  .#{$label-group}__main {
    padding-block-start: var(--#{$text-input-group}--c-label-group__main--PaddingBlockStart);
    padding-block-end: var(--#{$text-input-group}--c-label-group__main--PaddingBlockEnd);
    padding-inline-end: var(--#{$text-input-group}--c-label-group__main--PaddingInlineEnd);
  }
}

.#{$text-input-group}__text {
  position: var(--#{$text-input-group}__text--Position, revert);
  display: inline-grid;
  flex: 1;
  grid-template-areas: "text-input";
  grid-template-columns: 1fr;
}

.#{$text-input-group}__icon {
  position: absolute;
  inset-block-start: 50%;
  inset-inline-start: var(--#{$text-input-group}__icon--InsetInlineStart);
  font-size: var(--#{$text-input-group}__icon--FontSize);
  color: var(--#{$text-input-group}__icon--Color);
  transform: translateY(var(--#{$text-input-group}__icon--TranslateY));

  &.pf-m-status {
    inset-inline-start: auto;
    inset-inline-end: var(--#{$text-input-group}__icon--m-status--InsetInlineEnd);
    color: var(--#{$text-input-group}__icon--m-status--Color);
  }
}
/* ... */

